--- a/22_04_01-Bootstrap Instalation/index.html
+++ b/22_04_01-Bootstrap Instalation/index.html
@@ -4,195 +4,192 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <meta charset="utf-8">
-    <title>TinDog</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
-    </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
-    </script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
-    </script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Ubuntu&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css//styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-</head>
+    <head>
+        <meta charset="utf-8">
+        <title>TinDog</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+            integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
+        </script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
+        </script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
+        </script>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Ubuntu&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="./css//styles.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    </head>
 
-<body>
+    <body>
+        <section id="title">
 
-    <section id="title">
-        <div class="container-fluid">
+            <div class="container-fluid">
 
-            <!-- Nav Bar -->
-            <nav class="navbar navbar-expand-lg navbar-dark">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarTogglerDemo02" aria-controls="navbarSupportedContent" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                    <a class="navbar-brand" href="">tindog</a>
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="">Contact</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="">Pricing</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="">Download</a>
-                        </li>
-                    </ul>
+                <!-- Nav Bar -->
+                <nav class="navbar navbar-expand-lg navbar-dark">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarTogglerDemo02" aria-controls="navbarSupportedContent" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                        <a class="navbar-brand" href="">tindog</a>
+                        <ul class="navbar-nav ml-auto">
+                            <li class="nav-item">
+                                <a class="nav-link" href="">Contact</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="">Pricing</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="">Download</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+
+                <!-- Title -->
+                <div class="row">
+                    <div class="col-lg-6">
+                        <h1>Meet new and interesting dogs nearby.</h1>
+                        <button type="button" class="btn btn-dark btn-lg download-button">
+                            <i class="fa-brands fa-apple"></i> Download</button>
+                        <button type="button" class="btn btn-outline-light btn-lg download-button">
+                            <i class="fa-brands fa-google-play"></i> Download</button>
+                    </div>
+                    <div class="col-lg-6 col-md-12 col-sm-12">
+                        <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
+                    </div>
                 </div>
-            </nav>
+            </div>
 
-            <!-- Title -->
+        </section>
+
+        <!-- Features -->
+
+        <section id="features">
+
             <div class="row">
-                <div class="col-lg-6">
-                    <h1>Meet new and interesting dogs nearby.</h1>
-                    <button type="button" class="btn btn-dark btn-lg download-button">
-                        <i class="fa-brands fa-apple"></i> Download</button>
-                    <button type="button" class="btn btn-outline-light btn-lg download-button">
-                        <i class="fa-brands fa-google-play"></i> Download</button>
+                <div class="feature-box col-lg-4">
+                    <i class="icon fa-solid fa-circle-check fa-4x"></i>
+                    <h3>Easy to use.</h3>
+                    <p>So easy to use, even your dog could do it.</p>
                 </div>
-                <div class="col-lg-6 col-md-12 col-sm-12">
-                    <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
+
+                <div class="feature-box col-lg-4">
+                    <i class="icon fa-solid fa-bullseye fa-4x"></i>
+                    <h3>Elite Clientele</h3>
+                    <p>We have all the dogs, the greatest dogs.</p>
                 </div>
-            </div>
-        </div>
 
-    </section>
-
-    <!-- Features -->
-
-    <section id="features">
-
-        <div class="row">
-            <div class="feature-box col-lg-4">
-                <i class="icon fa-solid fa-circle-check fa-4x"></i>
-                <h3>Easy to use.</h3>
-                <p>So easy to use, even your dog could do it.</p>
-            </div>
-
-            <div class="feature-box col-lg-4">
-                <i class="icon fa-solid fa-bullseye fa-4x"></i>
-                <h3>Elite Clientele</h3>
-                <p>We have all the dogs, the greatest dogs.</p>
-            </div>
-
-            <div class="feature-box col-lg-4">
-                <i class="icon fa-solid fa-heart fa-4x"></i>
-                <h3>Guaranteed to work.</h3>
-                <p>Find the love of your dog's life or your money back.</p>
-            </div>
-        </div>
-
-    </section>
-
-    <!-- Testimonials -->
-
-    <section id="testimonials">
-
-        <div id="testimonial-carousel" class="carousel slide" data-ride="carousel" data-interval="5000"
-            data-pause="hover">
-            <div class="carousel-inner">
-                <div class="carousel-item active container-fluid">
-                    <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest
-                        Corgi on TinDog. Woof.</h2>
-                    <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
-                    <em>Pebbles, New York</em>
-                </div>
-                <div class="carousel-item container-fluid">
-                    <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the
-                        love of their life. I think.</h2>
-                    <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-                    <em>Beverly, Illinois</em>
+                <div class="feature-box col-lg-4">
+                    <i class="icon fa-solid fa-heart fa-4x"></i>
+                    <h3>Guaranteed to work.</h3>
+                    <p>Find the love of your dog's life or your money back.</p>
                 </div>
             </div>
-            <a class="carousel-control-prev" href="#testimonial-carousel" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon"></span>
-            </a>
-            <a class="carousel-control-next" href="#testimonial-carousel" role="button" data-slide="next">
-                <span class="carousel-control-next-icon"></span>
-            </a>
-        </div>
 
-    </section>
+        </section>
 
+        <!-- Testimonials -->
 
-    <!-- Press -->
+        <section id="testimonials">
 
-    <section id="press">
-        <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
-        <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
-        <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
-        <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
+            <div id="testimonial-carousel" class="carousel slide" data-ride="carousel" data-interval="5000"
+                data-pause="hover">
+                <div class="carousel-inner">
+                    <div class="carousel-item active container-fluid">
+                        <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest
+                            Corgi on TinDog. Woof.</h2>
+                        <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
+                        <div><em>Pebbles, New York</em></div>
+                    </div>
+                    <div class="carousel-item container-fluid">
+                        <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the
+                            love of their life. I think.</h2>
+                        <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
+                        <div><em>Beverly, Illinois</em></div>
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#testimonial-carousel" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon"></span>
+                </a>
+                <a class="carousel-control-next" href="#testimonial-carousel" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon"></span>
+                </a>
+            </div>
 
-    </section>
+        </section>
 
+        <!-- Press -->
 
-    <!-- Pricing -->
+        <section id="press">
 
-    <section id="pricing">
+            <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
+            <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
+            <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
+            <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
 
-        <h2>A Plan for Every Dog's Needs</h2>
-        <p>Simple and affordable price plans for your and your dog.</p>
+        </section>
 
+        <!-- Pricing -->
 
-        <h3>Chihuahua</h3>
-        <h2>Free</h2>
-        <p>5 Matches Per Day</p>
-        <p>10 Messages Per Day</p>
-        <p>Unlimited App Usage</p>
-        <button type="button">Sign Up</button>
+        <section id="pricing">
 
-
-        <h3>Labrador</h3>
-        <h2>$49 / mo</h2>
-        <p>Unlimited Matches</p>
-        <p>Unlimited Messages</p>
-        <p>Unlimited App Usage</p>
-        <button type="button">Sign Up</button>
-
-
-        <h3>Mastiff</h3>
-        <h2>$99 / mo</h2>
-        <p>Pirority Listing</p>
-        <p>Unlimited Matches</p>
-        <p>Unlimited Messages</p>
-        <p>Unlimited App Usage</p>
-        <button type="button">Sign Up</button>
-
-    </section>
+            <h2>A Plan for Every Dog's Needs</h2>
+            <p>Simple and affordable price plans for your and your dog.</p>
 
 
-    <!-- Call to Action -->
-
-    <section id="cta">
-
-        <h3>Find the True Love of Your Dog's Life Today.</h3>
-        <button type="button">Download</button>
-        <button type="button">Download</button>
-
-    </section>
+            <h3>Chihuahua</h3>
+            <h2>Free</h2>
+            <p>5 Matches Per Day</p>
+            <p>10 Messages Per Day</p>
+            <p>Unlimited App Usage</p>
+            <button type="button">Sign Up</button>
 
 
-    <!-- Footer -->
+            <h3>Labrador</h3>
+            <h2>$49 / mo</h2>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited App Usage</p>
+            <button type="button">Sign Up</button>
 
-    <footer id="footer">
 
-        <p>© Copyright TinDog</p>
+            <h3>Mastiff</h3>
+            <h2>$99 / mo</h2>
+            <p>Pirority Listing</p>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited App Usage</p>
+            <button type="button">Sign Up</button>
 
-    </footer>
+        </section>
 
 
-</body>
+        <!-- Call to Action -->
+
+        <section id="cta">
+
+            <h3>Find the True Love of Your Dog's Life Today.</h3>
+            <button type="button">Download</button>
+            <button type="button">Download</button>
+
+        </section>
+
+        <!-- Footer -->
+
+        <footer id="footer">
+
+            <p>© Copyright TinDog</p>
+
+        </footer>
+
+    </body>
 
 </html>
